# raft

./: .gitignore  .rustc_info.json  3700kvstore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  run.py
.cargo/: config.toml
notes/: errors.md  leader_elections.md  log_replication.md  messages.md  orchestrator.md
src/: loggers.rs  main.rs  messages.rs  raft.rs  replica.rs  timer.rs
src/raft/: loggers.rs  messages.rs  mod.rs  orchestrator.rs  raft_simulator.rs  replica.rs  timer.rs
tests/: stupid-1.json
