[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
polling = { version = "2.2.0"}
tokio-seqpacket = "0.5.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
serde = {version= "1.0.134", features=["derive"]}
serde_test = {version="1.0.134"}